[package]
name = "oxybox"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
bitflags = "2.9.3"
smol-rgb = { path = "../../smol-rgb", features = [
    "std",
    "serde",
    "bytemuck",
    "rand",
] }
oxybox-sys = { path = "../oxybox-sys" }
lyon = { version = "1", features = ["extra"] }


[lib]

[features]
default = []
